# ros_hybrid_sdk

./: CMakeLists.txt  README.md  package.xml
include/rapidjson/: CMakeLists.txt
include/sstl/: atomic_queue.h  functional.h  ref_ptr.h  thread.h  tuple.h
msg/: MyMsg.msg
src/: Agent.cpp  Agent.h  DefaultAgent.cpp  DefaultAgent.h  DispatchServer.cpp  DispatchServer.h  Log.cpp  Log.h  RefSocketor.h  SDKException.h  asio.cpp  cxx14wrapper.cpp  json.h  jsoncpp.cpp  main.cpp  test.cpp  testlib.cpp
src/Agent/: Agent.cpp  Agent.h
src/CommandMsg/: Command.pb.cc  Command.pb.h  (+1 more)
src/protoc/: CMakeLists.txt  Config.h  main.cpp
src/protoc/CodeGenerator/: CodeGenerator.h  GenCmake.cpp  GenCmake.h  GenCmakeTemplate.py  GenGoogleProtobuf.cpp  GenGoogleProtobuf.h  GenMsgCmake.cpp  GenMsgCmake.h  GenMsgCmakeTemplate.py  GenMsgGoogleProtobuf.cpp  GenMsgGoogleProtobuf.h  GenMsgGoogleProtobufTemplate.py  GenMsgServerCpp.cpp  GenMsgServerCpp.h  GenMsgServerCppTemplate.py  GenMsgServerUseOnly.cpp  GenMsgServerUseOnly.h  GenMsgServerUseOnlyTemplate.py  GenServerBuildPackage.cpp  GenServerBuildPackage.h  GenServerMsgBuildPackage.cpp  GoogleProtobufGeneratorTemplate.py
src/protoc/CodeGenerator/Msg/: GenMsgCmake.cpp  GenMsgCmake.h  GenMsgCmakeTemplate.py  GenMsgGoogleProtobuf.cpp  GenMsgGoogleProtobuf.h  GenMsgGoogleProtobufTemplate.py  GenMsgServerCpp.cpp  GenMsgServerCpp.h  GenMsgServerCppTemplate.py  GenMsgServerUseOnly.cpp  GenMsgServerUseOnly.h  GenMsgServerUseOnlyTemplate.py
src/protoc/CodeGenerator/Srv/: GenSrvCmake.cpp  GenSrvCmake.h  GenSrvCmakeTemplate.py  GenSrvGoogleProtobuf.cpp  GenSrvGoogleProtobuf.h  GenSrvGoogleProtobufTemplate.py  GenSrvServerCpp.cpp  GenSrvServerCpp.h  GenSrvServerCppTemplate.py
src/protoc/Parser/: MsgParser.cpp  MsgParser.h  Parser.h  Preprocessor.cpp  Preprocessor.h  SrvParse.cpp  SrvParse.h  typedef.cpp  typedef.h
srv/: MyService.srv
tool_scripts/: gen_all_ros_message_for_server.py
(+81 files in other folders)
